# agendable

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  init-db.sh  mypy.ini  pyproject.toml  test-results.xml
.github/: SECURITY.md  codecov.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: actionlint.yml  ci.yml  codeql.yml  complexity.yml  dependency-scan.yml  deploy-gcp.yml  semgrep.yml  uv-lock-upgrade.yml
agendable/: settings.py
common-lib/: mypy.ini  pyproject.toml
common-lib/common_lib/: exceptions.py  models.py  repositories.py  services.py
common-lib/src/common_lib/: exceptions.py  logging_config.py  models.py  redis_client.py  repositories.py  services.py
common-lib/tests/: conftest.py  test_models.py  test_repositories.py  test_services.py
docs/: google-calendar-sync-issue-draft.md
kong/: Dockerfile
kong/scripts/: configure.sh  entrypoint.sh
meeting-service/: Dockerfile  alembic.ini  mypy.ini  pyproject.toml  pytest.ini
meeting-service/alembic/: env.py
meeting-service/alembic/versions/: 53cc1a63e3db_incremental_updates.py  8a90f1ee6865_initial_revision.py  97f80507c587_initial_schema.py  a650355f5549_initial.py
meeting-service/app/: exceptions.py  main.py
meeting-service/app/api/routes/: meeting_routes.py  recurrence_routes.py  task_routes.py  user_routes.py
meeting-service/app/api/v1/routes/: meeting.py  recurrence.py  task.py  user.py
meeting-service/app/core/: config.py  decorators.py  dependencies.py
meeting-service/app/db/: db.py
meeting-service/app/db/models/: __init__.py  meeting.py  recurrence.py  relationships.py  task.py  user.py
meeting-service/app/db/repositories/: __init__.py  meeting_repo.py  recurrence_repo.py  task_repo.py  user_repo.py
meeting-service/app/repositories/: meeting.py  recurrence.py  task.py
meeting-service/app/schemas/: meeting.py  meeting_schemas.py  recurrence_schemas.py  task_schemas.py  user_schemas.py
meeting-service/app/services/: __init__.py  meeting.py  meeting_service.py  recurrence.py  recurrence_service.py  redis_subscriber.py  task.py  task_service.py  user.py  user_service.py
meeting-service/app/utils/: auth.py  redis_client.py
meeting-service/tests/: conftest.py  factories.py  test_main.py
meeting-service/tests/api/routes/: test_meeting_routes.py  test_recurrence_routes.py  test_task_routes.py  test_user_routes.py
meeting-service/tests/api/v1/routes/: test_meeting.py  test_task.py  test_user.py
meeting-service/tests/db/repositories/: test_meeting_repo.py  test_recurrence_repo.py  test_task_repo.py  test_user_repo.py
meeting-service/tests/repositories/: test_meeting.py  test_recurrence.py  test_task.py  test_user.py
meeting-service/tests/services/: test_meeting.py  test_meeting_service.py  test_recurrence.py  test_recurrence_service.py  test_task.py  test_task_service.py  test_user.py  test_user_service.py
migrations/versions/: 0016_reminder_delivery_observability.py  0017_google_calendar_sync_foundation.py  0018_imported_series_review_decisions.py
restapi/: models.py  serializers.py  tasks.py  test_utils.py  views.py
restapi/factories/: meeting_factory.py
restapi/services/: meeting_service.py
restapi/tests/: test_models.py  test_serializers.py  (+1 more)
tests/: test_calendar_event_mapping_service.py  test_cli_check_db.py  test_cli_google_calendar_sync.py  test_cli_seed_dev_data.py  test_cli_workers.py  test_google_calendar_client.py  test_google_calendar_sync_service.py  test_google_calendar_sync_service_backlinks.py  test_google_calendar_sync_service_locking.py  test_google_calendar_sync_service_resilience.py  test_logging_config.py  test_oidc_service.py  test_reminders.py  test_web_smoke.py
user-service/: .pylintrc  Dockerfile  entrypoint.sh  mypy.ini  pyproject.toml  pytest.ini
user-service/alembic/: env.py
user-service/alembic/versions/: 27f1193137ff_incremental_updates.py  815de8862897_initial_revision.py  868b8b1e474c_.py  b68599ab2f9e_initial.py
user-service/app/: exceptions.py  main.py
user-service/app/api/: dependencies.py
user-service/app/api/routes/: auth_routes.py  group_routes.py  role_routes.py  user_routes.py
user-service/app/api/v1/routes/: auth.py  group.py  role.py  user.py
user-service/app/core/: config.py  dependencies.py  security.py  settings.py
user-service/app/db/: models.py  relationships.py  session.py
user-service/app/db/models/: group.py  role.py  user.py
user-service/app/db/repositories/: group_repo.py  role_repo.py  user_repo.py
user-service/app/repositories/: group.py  role.py  user.py
user-service/app/schemas/: groups.py  role.py  user.py
user-service/app/services/: auth.py  auth_service.py  group.py  group_service.py  role.py  role_service.py  user.py  user_service.py
user-service/tests/: conftest.py  test_auth.py  test_group_crud.py  test_registration.py  test_role_crud.py  test_user_crud.py
web-ui/: .pylintrc  Dockerfile  mypy.ini  package-lock.json  package.json  pyproject.toml  src-structure
web-ui/app/: config.py  main.py
web-ui/app/core/: auth.py  config.py  templating.py
web-ui/app/routes/: home.py  meetings.py  users.py
web-ui/app/templates/: home.html
web-ui/app/templates/_partials/: _nav.html
web-ui/app/templates/meetings/: create.html  list.html
web-ui/app/templates/users/: list.html  login.html  register.html
web-ui/src/: App.tsx  main.tsx
web-ui/src/components/: MeetingList.tsx  Navbar.tsx
web-ui/src/context/: AuthContext.tsx
web-ui/src/pages/: CreateMeetingPage.tsx  HomePage.tsx  LoginPage.tsx  MeetingDetailsPage.tsx  MeetingListPage.tsx  MeetingsPage.tsx  TasksPage.tsx
web-ui/src/services/: api.ts  authService.ts  meetingService.ts  theme.ts
web-ui/src/styles/: navbar.css
web-ui/src/types/: meeting.d.ts
web-ui/static/css/: main.css
web-ui/templates/: base.html  profile.html  register.html
web-ui/templates/meetings/: show_meetings.html
web-ui/templates/users/: profile.html  register.html
(+101 files in other folders)
