[build-system]
requires = [
  "uv>=0.4.0",
  "hatchling>=1.16.0"
]
build-backend = "hatchling.build"

[tool.uv]
# workspace config
workspace = { members = ["common-lib", "meeting-service", "user-service"] }

# dev tools (installed via `uv sync --with dev`)
dev-dependencies = [
  "async-asgi-testclient>=1.4.11",
  "coverage>=7.7.0",
  "factory-boy>=3.3.3",
  "isort>=6.0.1",
  "mypy>=1.15.0",
  "pre-commit>=4.2.0",
  "pylint>=3.3.6",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.3",
  "python-jose>=3.5.0",
  "ruff>=0.11.1",
  "types-python-dateutil>=2.9.0.20250516",
]

[tool.uv.sources]
"common-lib"      = { workspace = true }
"meeting-service" = { workspace = true }
"user-service"    = { workspace = true }

[project]
name = "Agendable"
version = "0.1.0"
description = "Agendable is an app for managing recurring meetings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.11",
  "uvicorn>=0.34.3",
  "pydantic>=2.10.6",
  "pydantic-settings>=2.8.1",
  "sqlalchemy>=2.0.39",
  "redis>=5.2.1",
  "httpx>=0.28.1",
  "loguru>=0.7.3",
  "greenlet>=3.1.1",
  "python-dateutil>=2.9.0.post0",
  "asyncpg>=0.30.0",
  "aiosqlite>=0.21.0",
  "psycopg2-binary>=2.9.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
force_sort_within_sections = true
known_first_party = ["app"]

[tool.ruff]
exclude = [
  "**/__init__.py",
  "**/alembic/versions/**",
]

[tool.hatch.build.targets.wheel]
packages = []
include = [
  "pyproject.toml",
  "README.md",
]
