[build-system]
requires = ["hatchling>=1.16.0"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# allow direct references like "{root:uri}/path"
allow-direct-references = true

[tool.uv.workspace]
members = [
  "common-lib",
  "meeting-service",
  "user-service",
]

[tool.uv.sources]
common-lib      = { workspace = true }
meeting-service = { workspace = true }
user-service    = { workspace = true }

[project]
name            = "agendable"
version         = "0.1.0"
description     = "Agendable is an app for managing recurring meetings"
readme          = "README.md"
requires-python = ">=3.13"

dependencies = [
  # local workspace packages
  "common-lib",
  "meeting-service",
  "user-service",
]

[dependency-groups]
dev = [
  "async-asgi-testclient>=1.4.11",
  "coverage>=7.7.0",
  "factory-boy>=3.3.3",
  "isort>=6.0.1",
  "mypy>=1.15.0",
  "pre-commit>=4.2.0",
  "pylint>=3.3.6",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.3",
  "python-jose>=3.5.0",
  "ruff>=0.11.1",
  "types-factory-boy>=0.4.1",
  "types-passlib>=1.7.7.20250602",
  "types-python-dateutil>=2.9.0.20250516",
  "types-python-jose>=3.5.0.20250531",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
force_sort_within_sections = true
known_first_party = ["app"]

[tool.ruff]
exclude = [
  "**/__init__.py",
  "**/alembic/versions/**",
]

[tool.hatch.build.targets.wheel]
packages = []
include  = ["pyproject.toml", "README.md"]
