[build-system]
requires = [
  "uv>=0.4.0",
  "hatchling>=1.16.0"
]
build-backend = "hatchling.build"

[project]
name = "agendable-meeting-service"
version = "0.1.0"
description = "Agendable Meeting Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "common-lib",
  "databases>=0.9.0",
]

[tool.hatch.build]
packages = []
include = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
force_sort_within_sections = true
known_first_party = ["app"]

[tool.ruff]
exclude = [
  "**/__init__.py",
  "**/alembic/versions/**",
]
