[build-system]
requires    = ["hatchling>=1.10"]
build-backend = "hatchling.build"

[project]
name = "meeting-service"
version = "0.1.0"
description = "Agendable Meeting Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiosqlite==0.21.0",
  "alembic==1.16.4",
  "asyncpg==0.30.0",
  "common-lib",
  "fastapi==0.116.1",
  "greenlet==3.2.3",
  "httpx==0.28.1",
  "loguru==0.7.3",
  "psycopg2-binary==2.9.10",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "python-dateutil==2.9.0.post0",
  "redis==6.2.0",
  "sqlalchemy==2.0.41",
  "uvicorn==0.35.0",
  "databases>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = []
include = ["app"]
