[project]
name = "agendable-user-service"
version = "0.1.0"
description = "Agendable User Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "common-lib @ file://../common-lib",
    "asyncpg",
    "fastapi",
    "greenlet",
    "httpx",
    "loguru",
    "passlib[bcrypt]>=1.7.4",
    "python-jose>=3.4.0",
    "psycopg2-binary",
    "pydantic",
    "pydantic-settings",
    "redis",
    "sqlalchemy",
    "uvicorn[standard]"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
force_sort_within_sections = true
known_first_party = ["app"]

[tool.ruff]
exclude = [
    "**/__init__.py",
    "**/alembic/versions/**"
]
