[project]
name = "user-service"
version = "0.1.0"
description = "Agendable User Service"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
  "common-lib",
  "passlib[bcrypt]>=1.7.4",
  "pydantic[email]>=2.10.6",
  "python-jose>=3.5.0",
]

[tool.hatch.build.targets.wheel]
packages = []
include = ["app"]
