[build-system]
requires    = ["hatchling>=1.10"]
build-backend = "hatchling.build"

[project]
name = "web-ui"
version = "0.1.0"
description = "Agendable web UI (FastAPI + Jinja2 + HTMX)"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
  "aiofiles>=24.0",
  "fastapi==0.116.1",
  "jinja2>=3.1.6",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "uvicorn[standard]>=0.35.0"
]

[tool.hatch.build.targets.wheel]
packages = []
include = ["app.py", "templates/*", "static/*"]
